crates/php-parser/tests/snapshots/nikic_integration_tests__nikic_stmt_voidcast.snap
---
source: crates/php-parser/tests/nikic_integration_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Cast": [
              "Void",
              {
                "kind": {
                  "FunctionCall": {
                    "name": {
                      "kind": {
                        "Identifier": "foo"
                      },
                      "span": {
                        "start": 12,
                        "end": 15
                      }
                    },
                    "args": []
                  }
                },
                "span": {
                  "start": 12,
                  "end": 17
                }
              }
            ]
          },
          "span": {
            "start": 6,
            "end": 17
          }
        }
      },
      "span": {
        "start": 6,
        "end": 19
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Cast": [
              "Void",
              {
                "kind": {
                  "FunctionCall": {
                    "name": {
                      "kind": {
                        "Identifier": "foo"
                      },
                      "span": {
                        "start": 28,
                        "end": 31
                      }
                    },
                    "args": []
                  }
                },
                "span": {
                  "start": 28,
                  "end": 33
                }
              }
            ]
          },
          "span": {
            "start": 19,
            "end": 33
          }
        }
      },
      "span": {
        "start": 19,
        "end": 35
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Binary": {
              "left": {
                "kind": {
                  "Cast": [
                    "Void",
                    {
                      "kind": {
                        "Variable": "a"
                      },
                      "span": {
                        "start": 41,
                        "end": 43
                      }
                    }
                  ]
                },
                "span": {
                  "start": 35,
                  "end": 43
                }
              },
              "op": "LogicalOr",
              "right": {
                "kind": {
                  "Variable": "b"
                },
                "span": {
                  "start": 47,
                  "end": 49
                }
              }
            }
          },
          "span": {
            "start": 35,
            "end": 49
          }
        }
      },
      "span": {
        "start": 35,
        "end": 83
      }
    },
    {
      "kind": {
        "For": {
          "init": [
            {
              "kind": {
                "Cast": [
                  "Void",
                  {
                    "kind": {
                      "FunctionCall": {
                        "name": {
                          "kind": {
                            "Identifier": "a"
                          },
                          "span": {
                            "start": 94,
                            "end": 95
                          }
                        },
                        "args": []
                      }
                    },
                    "span": {
                      "start": 94,
                      "end": 97
                    }
                  }
                ]
              },
              "span": {
                "start": 88,
                "end": 97
              }
            }
          ],
          "condition": [
            {
              "kind": {
                "Variable": "b"
              },
              "span": {
                "start": 99,
                "end": 101
              }
            }
          ],
          "update": [
            {
              "kind": {
                "Cast": [
                  "Void",
                  {
                    "kind": {
                      "Variable": "c"
                    },
                    "span": {
                      "start": 109,
                      "end": 111
                    }
                  }
                ]
              },
              "span": {
                "start": 103,
                "end": 111
              }
            }
          ],
          "body": {
            "kind": {
              "Block": []
            },
            "span": {
              "start": 113,
              "end": 116
            }
          }
        }
      },
      "span": {
        "start": 83,
        "end": 116
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "x"
                },
                "span": {
                  "start": 173,
                  "end": 175
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Cast": [
                    "Void",
                    {
                      "kind": {
                        "Variable": "y"
                      },
                      "span": {
                        "start": 185,
                        "end": 187
                      }
                    }
                  ]
                },
                "span": {
                  "start": 178,
                  "end": 187
                }
              }
            }
          },
          "span": {
            "start": 173,
            "end": 187
          }
        }
      },
      "span": {
        "start": 173,
        "end": 188
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 188
  }
}
